# SinglyLinkedList-Stack

./: .gitignore  CMakeLists.txt  README.md  concatenate.hpp  main.cpp  singlyLinkedList.hpp  stack.hpp
tests/: CMakeLists.txt  testConcatenate.cpp  testSinglyLinkedList.cpp  testStack.cpp
tests/fixtures/: singlyLinkedListFixture.cpp  singlyLinkedListFixture.hpp  stackFixture.cpp  stackFixture.hpp
